--- a/main.ipynb
+++ b/main.ipynb
@@ -16,10 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "e17682b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m accuracy_score, mean_squared_error, f1_score\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# data manipulation imports\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "# sklearn imports\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -30,7 +42,9 @@
     "# data manipulation imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as mcolors\n"
    ]
   },
   {
@@ -1141,6 +1155,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb54f738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#attempt visualizing a headmap \n",
+    "#use only numeric columns\n",
+    "numeric_df = df.select_dtypes(include=['int64', 'float64'])\n",
+    "\n",
+    "#compute correlation matrix\n",
+    "corr = numeric_df.corr()\n",
+    "\n",
+    "#plot heatmap\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.heatmap(corr, cmap='coolwarm', linewidths=0.5)\n",
+    "plt.title(\"Correlation Heatmap of Numeric Features\")\n",
+    "plt.show()\n",
+    "\n",
+    "\"\"\" OBSERVATIONS:\n",
+    "Generally a lot more negative corrolation than positive ones.\n",
+    "\n",
+    "Song Type\n",
+    "    Negative corrolation: \n",
+    "        energy + acousticness\n",
+    "        loudness + acousticness\n",
+    "        loudness + instrumentalness\n",
+    "        valence + instrumentalness\n",
+    "    \n",
+    "    Positive corrolation:\n",
+    "        loudness + energy\n",
+    "        loudness + danceability\n",
+    "        danceability + valence\n",
+    "        energy + valence\n",
+    "        speechiness + explicit\n",
+    "\n",
+    "Popularity\n",
+    "    Negative corrolation:\n",
+    "        popularity + instrumentalness\n",
+    "        popularity + duration_ms\n",
+    "\n",
+    "    No positive corrolation :((\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3cbac8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try normalizing using log_scale to address highly skewed datasets\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.heatmap(corr, norm=mcolors.LogNorm(), cmap='coolwarm', linewidths=0.5)\n",
+    "plt.title(\"Correlation Heatmap of Numeric Features (Log Scaled)\")\n",
+    "plt.show()\n",
+    "\n",
+    "\"\"\" OBSERVATIONS:\n",
+    "Generally a lot more positive corrolations\n",
+    "\n",
+    "Popularity\n",
+    "    Negative corrolation:\n",
+    "        energy\n",
+    "        tempo\n",
+    "\n",
+    "    Positive corrolation:\n",
+    "        explicit\n",
+    "        danceability\n",
+    "        loudness\n",
+    "        time_signature\n",
+    "\"\"\"\n",
+    "# dig deeper into the significant corrolations"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3a0b639c",
    "metadata": {},
@@ -1173,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
