Update popularity feature engineering in notebook

--- a/main (1).ipynb
+++ b/main (1).ipynb
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "5548c079-672e-4fac-a947-9c776508a41f",
    "metadata": {},
    "outputs": [
@@ -1634,20 +1634,20 @@
        "      <td>Gen Hoshino</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>Comedy</td>\n",
-       "      <td>2</td>\n",
-       "      <td>230666</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.042473</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.676</td>\n",
+       "      <td>0.686294</td>\n",
        "      <td>0.4610</td>\n",
        "      <td>1</td>\n",
-       "      <td>-6.746</td>\n",
+       "      <td>0.791392</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.1430</td>\n",
-       "      <td>0.0322</td>\n",
+       "      <td>0.148187</td>\n",
+       "      <td>0.032329</td>\n",
        "      <td>0.000001</td>\n",
        "      <td>0.3580</td>\n",
-       "      <td>0.715</td>\n",
-       "      <td>87.917</td>\n",
+       "      <td>0.718593</td>\n",
+       "      <td>0.361245</td>\n",
        "      <td>4</td>\n",
        "      <td>acoustic</td>\n",
        "      <td>(0.416, 0.52]</td>\n",
@@ -1658,20 +1658,20 @@
        "      <td>Ben Woodward</td>\n",
        "      <td>Ghost (Acoustic)</td>\n",
        "      <td>Ghost - Acoustic</td>\n",
-       "      <td>1</td>\n",
-       "      <td>149610</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.026971</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.420</td>\n",
+       "      <td>0.426396</td>\n",
        "      <td>0.1660</td>\n",
        "      <td>1</td>\n",
-       "      <td>-17.235</td>\n",
+       "      <td>0.597377</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0763</td>\n",
-       "      <td>0.9240</td>\n",
+       "      <td>0.079067</td>\n",
+       "      <td>0.927711</td>\n",
        "      <td>0.000006</td>\n",
        "      <td>0.1010</td>\n",
-       "      <td>0.267</td>\n",
-       "      <td>77.489</td>\n",
+       "      <td>0.268342</td>\n",
+       "      <td>0.318397</td>\n",
        "      <td>4</td>\n",
        "      <td>acoustic</td>\n",
        "      <td>(-0.001, 0.267]</td>\n",
@@ -1682,20 +1682,20 @@
        "      <td>Ingrid Michaelson;ZAYN</td>\n",
        "      <td>To Begin Again</td>\n",
        "      <td>To Begin Again</td>\n",
-       "      <td>1</td>\n",
-       "      <td>210826</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.038679</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.438</td>\n",
+       "      <td>0.444670</td>\n",
        "      <td>0.3590</td>\n",
        "      <td>0</td>\n",
-       "      <td>-9.734</td>\n",
+       "      <td>0.736123</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0557</td>\n",
-       "      <td>0.2100</td>\n",
+       "      <td>0.057720</td>\n",
+       "      <td>0.210843</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.1170</td>\n",
-       "      <td>0.120</td>\n",
-       "      <td>76.332</td>\n",
+       "      <td>0.120603</td>\n",
+       "      <td>0.313643</td>\n",
        "      <td>4</td>\n",
        "      <td>acoustic</td>\n",
        "      <td>(0.267, 0.416]</td>\n",
@@ -1706,20 +1706,20 @@
        "      <td>Kina Grannis</td>\n",
        "      <td>Crazy Rich Asians (Original Motion Picture Sou...</td>\n",
        "      <td>Can't Help Falling In Love</td>\n",
-       "      <td>2</td>\n",
-       "      <td>201933</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.036978</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.266</td>\n",
+       "      <td>0.270051</td>\n",
        "      <td>0.0596</td>\n",
        "      <td>0</td>\n",
-       "      <td>-18.515</td>\n",
+       "      <td>0.573701</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0363</td>\n",
-       "      <td>0.9050</td>\n",
+       "      <td>0.037617</td>\n",
+       "      <td>0.908635</td>\n",
        "      <td>0.000071</td>\n",
        "      <td>0.1320</td>\n",
-       "      <td>0.143</td>\n",
-       "      <td>181.740</td>\n",
+       "      <td>0.143719</td>\n",
+       "      <td>0.746758</td>\n",
        "      <td>3</td>\n",
        "      <td>acoustic</td>\n",
        "      <td>(-0.001, 0.267]</td>\n",
@@ -1730,20 +1730,20 @@
        "      <td>Chord Overstreet</td>\n",
        "      <td>Hold On</td>\n",
        "      <td>Hold On</td>\n",
-       "      <td>2</td>\n",
-       "      <td>198853</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.036389</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.618</td>\n",
+       "      <td>0.627411</td>\n",
        "      <td>0.4430</td>\n",
        "      <td>2</td>\n",
-       "      <td>-9.681</td>\n",
+       "      <td>0.737103</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0526</td>\n",
-       "      <td>0.4690</td>\n",
+       "      <td>0.054508</td>\n",
+       "      <td>0.470884</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0829</td>\n",
-       "      <td>0.167</td>\n",
-       "      <td>119.949</td>\n",
+       "      <td>0.167839</td>\n",
+       "      <td>0.492863</td>\n",
        "      <td>4</td>\n",
        "      <td>acoustic</td>\n",
        "      <td>(0.416, 0.52]</td>\n",
@@ -1763,52 +1763,64 @@
        "4        Chord Overstreet                                            Hold On   \n",
        "\n",
        "                   track_name  popularity  duration_ms  explicit  \\\n",
-       "0                      Comedy           2       230666         0   \n",
-       "1            Ghost - Acoustic           1       149610         0   \n",
-       "2              To Begin Again           1       210826         0   \n",
-       "3  Can't Help Falling In Love           2       201933         0   \n",
-       "4                     Hold On           2       198853         0   \n",
+       "0                      Comedy         0.0     0.042473         0   \n",
+       "1            Ghost - Acoustic         0.0     0.026971         0   \n",
+       "2              To Begin Again         0.0     0.038679         0   \n",
+       "3  Can't Help Falling In Love         0.0     0.036978         0   \n",
+       "4                     Hold On         0.0     0.036389         0   \n",
        "\n",
        "   danceability  energy  key  loudness  ...  speechiness  acousticness  \\\n",
-       "0         0.676  0.4610    1    -6.746  ...       0.1430        0.0322   \n",
-       "1         0.420  0.1660    1   -17.235  ...       0.0763        0.9240   \n",
-       "2         0.438  0.3590    0    -9.734  ...       0.0557        0.2100   \n",
-       "3         0.266  0.0596    0   -18.515  ...       0.0363        0.9050   \n",
-       "4         0.618  0.4430    2    -9.681  ...       0.0526        0.4690   \n",
+       "0      0.686294  0.4610    1  0.791392  ...     0.148187      0.032329   \n",
+       "1      0.426396  0.1660    1  0.597377  ...     0.079067      0.927711   \n",
+       "2      0.444670  0.3590    0  0.736123  ...     0.057720      0.210843   \n",
+       "3      0.270051  0.0596    0  0.573701  ...     0.037617      0.908635   \n",
+       "4      0.627411  0.4430    2  0.737103  ...     0.054508      0.470884   \n",
        "\n",
-       "   instrumentalness  liveness  valence    tempo  time_signature  track_genre  \\\n",
-       "0          0.000001    0.3580    0.715   87.917               4     acoustic   \n",
-       "1          0.000006    0.1010    0.267   77.489               4     acoustic   \n",
-       "2          0.000000    0.1170    0.120   76.332               4     acoustic   \n",
-       "3          0.000071    0.1320    0.143  181.740               3     acoustic   \n",
-       "4          0.000000    0.0829    0.167  119.949               4     acoustic   \n",
+       "   instrumentalness  liveness   valence     tempo  time_signature  \\\n",
+       "0          0.000001    0.3580  0.718593  0.361245               4   \n",
+       "1          0.000006    0.1010  0.268342  0.318397               4   \n",
+       "2          0.000000    0.1170  0.120603  0.313643               4   \n",
+       "3          0.000071    0.1320  0.143719  0.746758               3   \n",
+       "4          0.000000    0.0829  0.167839  0.492863               4   \n",
        "\n",
-       "          energy_q   danceability_q  \n",
-       "0    (0.416, 0.52]    (0.671, 0.72]  \n",
-       "1  (-0.001, 0.267]   (0.328, 0.423]  \n",
-       "2   (0.267, 0.416]   (0.423, 0.486]  \n",
-       "3  (-0.001, 0.267]  (-0.001, 0.328]  \n",
-       "4    (0.416, 0.52]    (0.58, 0.625]  \n",
+       "   track_genre         energy_q   danceability_q  \n",
+       "0     acoustic    (0.416, 0.52]    (0.671, 0.72]  \n",
+       "1     acoustic  (-0.001, 0.267]   (0.328, 0.423]  \n",
+       "2     acoustic   (0.267, 0.416]   (0.423, 0.486]  \n",
+       "3     acoustic  (-0.001, 0.267]  (-0.001, 0.328]  \n",
+       "4     acoustic    (0.416, 0.52]    (0.58, 0.625]  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-   """
-   feature engineering for popularity
-   """
-   
-   df_norm.loc[df_norm['popularity'] < 40, 'popularity'] = 0      # Low
-   df_norm.loc[(df_norm['popularity'] >= 40) & (df_norm['popularity'] < 70), 'popularity'] = 1    # Medium
-   df_norm.loc[df_norm['popularity'] >= 70, 'popularity'] = 2     # High
-   
-   df_norm['popularity'].value_counts()
-   df_norm.head()
+    "# \"\"\"\n",
+    "#     feature engineering for popularity\n",
+    "# \"\"\"\n",
+    "# df.loc[df['popularity'] < 40, 'popularity'] = 0   # Low\n",
+    "# df.loc[(df['popularity'] >= 40) & (df['popularity'] < 70), 'popularity'] = 1  # Medium\n",
+    "# df.loc[df['popularity'] >= 70, 'popularity'] = 2  # High\n",
+    "\n",
+    "# df['popularity'].value_counts()\n",
+    "# df.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "feature engineering for popularity\n",
+    "\"\"\"\n",
+    "\n",
+    "df_norm.loc[df_norm['popularity'] < 40, 'popularity'] = 0      # Low\n",
+    "df_norm.loc[(df_norm['popularity'] >= 40) & (df_norm['popularity'] < 70), 'popularity'] = 1    # Medium\n",
+    "df_norm.loc[df_norm['popularity'] >= 70, 'popularity'] = 2     # High\n",
+    "\n",
+    "df_norm['popularity'].value_counts()\n",
+    "df_norm.head()\n"
    ]
   },
   {
