--- a/main.ipynb
+++ b/main.ipynb
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "3b20fc2f",
    "metadata": {},
    "outputs": [
@@ -1417,12 +1417,17 @@
     "df[\"energy_q\"] = pd.qcut(df[\"energy\"], 10)\n",
     "df[\"loudness_q\"] = pd.qcut(df[\"loudness\"], 10)\n",
     "pivot = df.pivot_table(values=\"popularity\", index=\"loudness_q\", columns=\"energy_q\", aggfunc=\"mean\")\n",
-    "sns.heatmap(pivot, cmap=\"viridis\")"
+    "\n",
+    "sns.heatmap(pivot, cmap=\"viridis\")\n",
+    "plt.title(\"Loudness and Energy vs Popularity\", fontsize=16)\n",
+    "plt.xlabel(\"Energy Quantile\")\n",
+    "plt.ylabel(\"Loudness Quantile\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "909641fb",
    "metadata": {},
    "outputs": [
@@ -1460,7 +1465,12 @@
     "df[\"danceability_q\"] = pd.qcut(df[\"danceability\"], 10)\n",
     "df[\"valence_q\"] = pd.qcut(df[\"valence\"], 10)\n",
     "pivot = df.pivot_table(values=\"popularity\", index=\"danceability_q\", columns=\"valence_q\", aggfunc=\"mean\")\n",
-    "sns.heatmap(pivot, cmap=\"viridis\")"
+    "\n",
+    "sns.heatmap(pivot, cmap=\"viridis\")\n",
+    "plt.title(\"Danceability and Valence vs Popularity\", fontsize=16)\n",
+    "plt.xlabel(\"Valence Quantile\")\n",
+    "plt.ylabel(\"Danceability Quantile\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -2152,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "f21e3293",
    "metadata": {},
    "outputs": [
@@ -2262,6 +2272,7 @@
     "plt.figure(figsize=(6, 4))\n",
     "cm = confusion_matrix(y_test_true, y_test_pred)\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', cbar=True)\n",
+    "plt.title(\"Confusion Matrix for Neural Network (Test)\", fontsize=16)\n",
     "plt.xlabel('Predicted Label')\n",
     "plt.ylabel('True Label')\n",
     "plt.show()"
@@ -2317,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "95190d8a-5188-4e81-beb1-2ce0aa222037",
    "metadata": {},
    "outputs": [],
@@ -2328,7 +2339,7 @@
     "    y = df[\"popularity\"].astype(int)\n",
     "    return X, y\n",
     "\n",
-    "def evaluate_classification(model, X, y, name=\"set\", threshold = 0.5):\n",
+    "def evaluate_classification(model, X, y, name=\"set\", threshold = 0.5, model_name=\"Model\"):\n",
     "    y_proba = model.predict_proba(X)[:, 1]\n",
     "    y_pred = (y_proba >= threshold).astype(int)\n",
     "    print(f\"\\n=== {name.upper()} ===\")\n",
@@ -2339,6 +2350,7 @@
     "    cm = confusion_matrix(y, y_pred)\n",
     "    disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=[0,1])\n",
     "    disp.plot(cmap=plt.cm.Blues)\n",
+    "    plt.title(f\"Confusion Matrix for {model_name}\", fontsize=16)\n",
     "    plt.show()"
    ]
   },
@@ -2455,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "ad78ca3b",
    "metadata": {},
    "outputs": [
@@ -2529,9 +2541,9 @@
    "source": [
     "logistic_model = LogisticRegression()\n",
     "logistic_model.fit(X_train_scaled, y_train)\n",
-    "evaluate_classification(logistic_model, X_train_scaled, y_train, threshold=0.5)\n",
-    "evaluate_classification(logistic_model, X_valid_scaled, y_valid, \"validation\", threshold=0.5)\n",
-    "evaluate_classification(logistic_model, X_test_scaled, y_test, \"test\", threshold=0.5)"
+    "evaluate_classification(logistic_model, X_train_scaled, y_train, threshold=0.5, model_name=\"Logistic Regression (Train)\")\n",
+    "evaluate_classification(logistic_model, X_valid_scaled, y_valid, \"validation\", threshold=0.5, model_name=\"Logistic Regression (Valid)\")\n",
+    "evaluate_classification(logistic_model, X_test_scaled, y_test, \"test\", threshold=0.5, model_name=\"Logistic Regression (Test)\")"
    ]
   },
   {
@@ -3811,7 +3823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "ec61fb86",
    "metadata": {},
    "outputs": [
@@ -3885,9 +3897,9 @@
    "source": [
     "best_xgb = grid.best_estimator_\n",
     "xgb_model.fit(X_train, y_train)\n",
-    "evaluate_classification(best_xgb, X_train, y_train, \"train\", threshold=0.5)\n",
-    "evaluate_classification(best_xgb, X_valid, y_valid, \"Validation\", threshold=0.5)\n",
-    "evaluate_classification(best_xgb, X_test, y_test, \"Test\", threshold=0.5)"
+    "evaluate_classification(best_xgb, X_train, y_train, \"train\", threshold=0.5, model_name=\"XGBoost (Train)\")\n",
+    "evaluate_classification(best_xgb, X_valid, y_valid, \"Validation\", threshold=0.5,model_name=\"XGBoost (Valid)\")\n",
+    "evaluate_classification(best_xgb, X_test, y_test, \"Test\", threshold=0.5, model_name=\"XGBoost (Test)\")"
    ]
   },
   {
@@ -4869,7 +4881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "50256163",
    "metadata": {},
    "outputs": [
@@ -4949,9 +4961,9 @@
    ],
    "source": [
     "best_rf = grid_rf.best_estimator_\n",
-    "evaluate_classification(best_rf, X_train, y_train, \"train\", threshold = 0.5)\n",
-    "evaluate_classification(best_rf, X_valid, y_valid, \"valid\", threshold = 0.5)\n",
-    "evaluate_classification(best_rf, X_test,  y_test,  \"test\", threshold = 0.5)\n",
+    "evaluate_classification(best_rf, X_train, y_train, \"train\", threshold = 0.5, model_name=\"Random Forest (Train)\")\n",
+    "evaluate_classification(best_rf, X_valid, y_valid, \"valid\", threshold = 0.5, model_name=\"Random Forest (Valid)\")\n",
+    "evaluate_classification(best_rf, X_test,  y_test,  \"test\", threshold = 0.5, model_name=\"Random Forest (Test)\")\n",
     "print(best_rf.score(X_test, y_test))"
    ]
   },
